Mon Jul 21 19:54:25 2003  Holger Bochnig <hbgg@gmx.net>

	* gnubg.c, procunits.c, rollout.c, set.c, procunits.c:
	  part of trying to port the multi-processing code to Windows

Fri Jul 11 20:42:23 2003  Holger Bochnig <hbgg@gmx.net>

	* external.c: ignore SIGPIPE on Windows

Fri Jul 11 19:04:01 2003  Holger Bochnig <hbgg@gmx.net>

	trying to use sockets on Windows (SIGPIPE still missing)

	* dice.c, external.c, external.h: added includes and defines for Windows
	* external.c: some workarounds for missing socket functions and
	              ones with different prototypes

Fri Jul 11 18:55:28 2003  Holger Bochnig <hbgg@gmx.net>

	* postscript.c: changed StartPage and EndPage to 
	  PSStartPage and PSEndPage, respectively, to avoid name clash
	  on Windows

Wed Jul 09 20:57:01 2003  Holger Bochnig <hbgg@gmx.net>

	* boardpos.c gtkexport.c gtkgame.c gtkgame.h gtkmet.c 
	  gtkmovefilter.c gtkprefs.c gtkrace.c gtkrolls.c gtktempmap.c 
	  gtktheory.c procunits.c procunits.h:
	  changed CreateDialog to GTKCreateDialog to avoid name clash on Windows,
	  added some #includes for Windows

Mon Jun  9 19:21:12 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c: various small fixes.
	* rollout.c: include "signal.h"

Wed Jun  4 20:18:36 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in, Makefile.am: autoconf magic for gthread.

Sat May 31 19:54:53 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): get number of processors
	for windows systems.

Sat May 31 19:48:18 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): experimental code for 
	determining the number of processors on *nix boxes.

Sat May 31 13:51:57 2003  Joern Thyssen  <jth@gnubg.org>

	more autoconf magic.

	* Makefile.am: conditional for procunits.
	* threadglobals.c: new file.
	* procunits.[ch]: move threadglobal stuff into threadglobals.[ch]

Sat May 31 13:30:36 2003  Joern Thyssen  <jth@gnubg.org>

	Add autoconf magic for multi-processor code.
