@@ -1,3 +1,8 @@
+Tue Jul 22 19:48:58 2003  Holger Bochnig <hbgg@gmx.net>
+
+	* external.c procunits.c rollout.c: multi-processing code
+	  compiles now on Windows, however, without GUI options
+
 Mon Jul 21 19:54:25 2003  Holger Bochnig <hbgg@gmx.net>
 
 	* gnubg.c, procunits.c, rollout.c, set.c, procunits.c:
